<resources>
    <string name="app_name">Slide N Solve</string>

    <string name="difficulty">Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="mode">Mode</string>
    <string name="normal">Normal</string>
    <string name="arcade">Arcade</string>

    <string name="elapsed_time">Elapsed Time</string>
    <string name="moves">Moves</string>
    <string name="moves_placeholder">0</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="msg_reset">This will shuffle the tiles and reset your current stats.\nAre you sure you want to proceed?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="msg_solved">You did it!</string>
    <string name="play_again">Play Again</string>
    <string name="main_menu">Main Menu</string>
</resources>
