<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs646.sdsu.slidensolve.GameBoardActivity">

    <LinearLayout
        android:id="@+id/id_toggle_buttons"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Switch
            android:id="@+id/id_toggle_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/sound" />

        <Switch
            android:id="@+id/id_toggle_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/vibration" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/id_metrics_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_toggle_buttons"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/id_timer_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elapsed_time"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <Chronometer
                android:id="@+id/id_elapsed_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_moves_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moves"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/id_moves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moves_placeholder"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/id_options_container"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_puzzle_container"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/id_start_pause_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/start" />

        <Button
            android:id="@+id/id_reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/reset" />

    </LinearLayout>


    <GridLayout
        android:id="@+id/id_puzzle_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:layout_below="@+id/id_metrics_container"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black">

    </GridLayout>

</RelativeLayout>
